peac_dev/force-app/main/default/objects/Renewal_Sharing__c/Renewal_Sharing__c.object-meta.xml
<CustomObject>
    <label>Renewal Sharing</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Sharing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Sharing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>