peac_dev/force-app/main/default/objects/Renewal_Sharing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Renewal Sharing</relationshipLabel>
    <relationshipName>Renewal_Sharing</relationshipName>
    <type>Lookup</type>
</CustomField>