peac_dev/force-app/main/default/objects/Renewal_Sharing__c/fields/Dealer_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Percentage__c</fullName>
    <label>Dealer Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>