peac_dev/force-app/main/default/objects/Renewal_Sharing__c/fields/Month_to_Start_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Month_to_Start_Sharing__c</fullName>
    <label>Month to Start Sharing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>