peac_dev/force-app/main/default/objects/Renewal_Sharing__c/fields/Purchase_Option__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Option__c</fullName>
    <label>Purchase Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 FMV</fullName>
            </value>
            <value>
                <fullName>02 10% Purchase Option</fullName>
            </value>
            <value>
                <fullName>03 1.00 Out</fullName>
            </value>
            <value>
                <fullName>05 Put</fullName>
            </value>
            <value>
                <fullName>06 Assigned Residual</fullName>
            </value>
            <value>
                <fullName>07 1st Right of Refusal</fullName>
            </value>
            <value>
                <fullName>08 Customer Owned</fullName>
            </value>
            <value>
                <fullName>11 Fixed Purchase Option</fullName>
            </value>
            <value>
                <fullName>12 FMV-Used Equipment</fullName>
            </value>
            <value>
                <fullName>13 FMV-Muni</fullName>
            </value>
            <value>
                <fullName>14 Operating Lease</fullName>
            </value>
            <value>
                <fullName>15 FMV No Renewal</fullName>
            </value>
            <value>
                <fullName>16 10% No Renewal</fullName>
            </value>
            <value>
                <fullName>17 PUT No Renewal</fullName>
            </value>
            <value>
                <fullName>18 Assign Resid No Renewal</fullName>
            </value>
            <value>
                <fullName>25 Guaranteed Residual</fullName>
            </value>
            <value>
                <fullName>26 Rental - No Purchase Opti</fullName>
            </value>
            <value>
                <fullName>28 Inventory Finance SAC B/O</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>