peac_dev/force-app/main/default/objects/Renewal_Sharing__c/validationRules/Percentage_should_be_accurate.validationRule-meta.xml
<ValidationRule>
    <fullName>Percentage_should_be_accurate</fullName>
    <active>true</active>
    <description>The sum of the Dealer Percentage and PEAC Percentage should be 100</description>
    <errorConditionFormula>((Dealer_Percentage__c )   +  (PEAC_Percentage__c )) &lt;&gt; 1</errorConditionFormula>
    <errorMessage>The sum of the Dealer Percentage and PEAC Percentage fields should be 100</errorMessage>
</ValidationRule>